--- a/assets/css/partials/variables.scss
+++ b/assets/css/partials/variables.scss
@@ -4,8 +4,8 @@
   --font-title: 'Archivo';
 
   // colors
-  --color-orange: #FBB03B;
-  --color-orange-light: #FFF3DF;
+  --color-orange: #0072f5;
+  --color-orange-light: #ddd;
   --color-black: #333333;
   --color-text: #868686;
   --color-white: #FFFFFF;
